--- a/homework/homework2/notebooks/00_project_setup.ipynb
+++ b/homework/homework2/notebooks/00_project_setup.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0e031be5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Environment & Config Check"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "2a3b9631",
    "metadata": {},
