--- a/homework/homework5/stage05_data-storage_homework.ipynb
+++ b/homework/homework5/stage05_data-storage_homework.ipynb
@@ -4,17 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stage 05 — Data Storage\n",
-    "Date: Aug 15 (Fri) (B)\n",
-    "\n",
-    "**Focus:** reproducible save/load; env-driven paths; CSV vs Parquet; raw vs processed.\n",
-    "\n",
-    "_Brief cloud note_: S3/data lakes support large-scale storage and efficient querying (partitioning, column pruning). No deep dive today."
+    "# Stage 05 — Data Storage - Homework\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved CSV → data/raw/prices_20250819-210143.csv\n",
-      "Saved Parquet → data/processed/prices_20250819-210143.parquet\n"
+      "Saved CSV → data/raw/prices_20250819-210841.csv\n",
+      "Saved Parquet → data/processed/prices_20250819-210841.parquet\n"
      ]
     }
    ],
@@ -130,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "CSV validation: {'shape_equal': True, 'cols_present': True, 'price_is_numeric': True, 'date_is_datetime': True}\n",
-      "Parquet read failed: A type extension with name pandas.period already defined\n"
+      "Parquet validation: {'shape_equal': True, 'cols_present': True, 'price_is_numeric': True, 'date_is_datetime': True}\n"
      ]
     }
    ],
@@ -177,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -239,23 +234,6 @@
     "except RuntimeError as e:\n",
     "    print('Parquet util demo skipped:', e)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Summary\n",
-    "- Env-driven paths → portable IO.\n",
-    "- CSV vs Parquet → tradeoffs.\n",
-    "- Utilities abstract away format details.\n",
-    "- Next: document storage plan in README."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a41e10ea",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
