--- a/homework/homework4/notebooks/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/homework4/notebooks/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "88770f4d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5bed22a3",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f1176bdb",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "aedd7cc7",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "7d2d2f40",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b4cbcf29",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: ../data/raw/api_source-alpha_symbol-TSLA_08192025-202307.csv\n"
+      "{'Missing columns': [], 'Dataframe_Shape': (182, 6), 'Na_total': 0}\n",
+      "Saved: ../data/raw/api_source-alpha_symbol-TSLA_08202025-195121.csv\n"
      ]
     }
    ],
@@ -107,8 +108,8 @@
     "    df_api = yf.download(SYMBOL, period='max', interval='1mo')\n",
     "    # df_api.columns = ['date','adj_close']\n",
     "\n",
-    "v_api = validate(df_api, ['date', 'open', 'high', 'low', 'close'])\n",
-    "\n",
+    "validate_api = validate(df_api, ['date', 'open', 'high', 'low', 'close'])\n",
+    "print(validate_api)\n",
     "fname = save_csv_file(df_api, \"api\", {\"source\": \"alpha\" if USE_ALPHA else \"yfinance\", \"symbol\": SYMBOL})\n",
     "out_path = DATA_PATH / fname\n",
     "df_api.to_csv(out_path, index=False)\n",
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "dde42401",
    "metadata": {},
    "outputs": [],
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "04376b37",
    "metadata": {},
    "outputs": [
@@ -136,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: ../data/raw/scrape_site-example_table-markets_08192025-202307.csv\n"
+      "Saved: ../data/raw/scrape_site-example_table-markets_08202025-195121.csv\n"
      ]
     }
    ],
